[gd_scene load_steps=24 format=3]

[ext_resource type="DynamicFontData" uid="uid://kxb83ow74jjj" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Regular.ttf" id="1"]
[ext_resource type="DynamicFontData" uid="uid://duvn221rynrun" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Bold.ttf" id="2"]
[ext_resource type="Texture" uid="uid://xupbj8gf778j" path="res://addons/dialogic/Example Assets/backgrounds/BubbleEnd.png" id="3"]
[ext_resource type="Script" path="res://addons/dialogic/Example Assets/ExampleScenes/HideWithChild.gd" id="4"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Text/Display_DialogText.gd" id="5"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Text/Display_NameLabel.gd" id="6"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Text/Display_InputHandler.gd" id="7"]
[ext_resource type="Script" path="res://addons/dialogic/Example Assets/ExampleScenes/ExampleTextBubble.gd" id="8"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Choice/Display_ChoiceButton.gd" id="9"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Theme/Display_Theme.gd" id="10"]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.847059, 0.627451, 0.364706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.768627 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.647059, 0.647059, 0.647059, 1 )
border_width_top = 10
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=13]
VScrollBar/styles/grabber = SubResource( 11 )
VScrollBar/styles/grabber_highlight = SubResource( 11 )
VScrollBar/styles/grabber_pressed = SubResource( 11 )
VScrollBar/styles/scroll = SubResource( 12 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )
draw_center = false
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 4.0
bg_color = Color( 0.866667, 0.741176, 0.505882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.835294, 0.835294, 0.835294, 0.34902 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 4.0
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.733333, 0.203922, 0.105882 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 1, 1, 0.372549 )
shadow_size = 7

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 4.0
bg_color = Color( 0.643137, 0.643137, 0.643137, 0.85098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="TextBubble" type="Control"]
margin_left = -24.0
margin_top = -138.0
margin_right = 374.0
margin_bottom = -31.0
script = ExtResource( 10 )

[node name="DialogicInputHandler" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
rect_min_size = Vector2( 134, 64 )
theme = SubResource( 13 )
script = ExtResource( 8 )

[node name="BubbleEnd" type="TextureRect" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = -2.0
margin_right = 82.0
margin_bottom = 36.0
texture = ExtResource( 3 )
expand = true

[node name="DialogText" type="RichTextLabel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/default_color = Color( 0.192157, 0.184314, 0.180392, 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
bbcode_text = "Some Text"
text = "Some Text"
scroll_active = false
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="OverlayPanel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 14 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -133.0
margin_top = 7.00001
margin_right = -1.0
margin_bottom = 35.0
grow_horizontal = 0
alignment = 2

[node name="DialogicNode_ChoiceButton" type="Button" parent="Control/HBoxContainer"]
margin_left = 264.0
margin_right = 314.0
margin_bottom = 28.0
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0.294118, 1 )
custom_colors/font_color_focus = Color( 0.027451, 0.027451, 0.027451, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 9 )
text = "Yes!"
script = ExtResource( 9 )

[node name="DialogicNode_ChoiceButton2" type="Button" parent="Control/HBoxContainer"]
margin_left = 318.0
margin_right = 368.0
margin_bottom = 28.0
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0.294118, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.215686, 0.333333, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 9 )
text = "Yes!"
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="DialogicNode_ChoiceButton3" type="Button" parent="Control/HBoxContainer"]
margin_left = 372.0
margin_right = 422.0
margin_bottom = 28.0
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0.294118, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.215686, 0.333333, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 9 )
text = "Yes!"
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="DialogicNode_ChoiceButton4" type="Button" parent="Control/HBoxContainer"]
margin_left = 426.0
margin_right = 476.0
margin_bottom = 28.0
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0.294118, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.215686, 0.333333, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 9 )
text = "Yes!"
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="DialogicNode_ChoiceButton5" type="Button" parent="Control/HBoxContainer"]
margin_left = 480.0
margin_right = 530.0
margin_bottom = 28.0
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0.294118, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.215686, 0.333333, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 9 )
text = "Yes!"
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="NameLabel" type="PanelContainer" parent="Control"]
margin_left = 2.0
margin_top = -16.0
margin_right = 22.0
margin_bottom = 13.0
rect_rotation = -1.88517
custom_styles/panel = SubResource( 3 )
script = ExtResource( 4 )

[node name="DialogicNode_NameLabel" type="Label" parent="Control/NameLabel"]
margin_left = 10.0
margin_top = 5.0
margin_right = 10.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
script = ExtResource( 6 )

[connection signal="continued_revealing_text" from="Control/DialogText" to="Control" method="_on_DialogText_continued_revealing_text"]
[connection signal="finished_revealing_text" from="Control/DialogText" to="Control" method="_on_DialogText_continued_revealing_text"]
